@@ -4,6 +4,7 @@
     ADDED: disk usage tool (alpha version)
     ADDED: vertical krusader: hit alt+ctrl+v to test
     ADDED: extra information in the totals bar 
+    FIXED: useraction: Crash when filename  contained brackets '(...)'
     FIXED: world-class-annoying-bug when sometimes while using quicksearch,
            the file that was selected by quicksearch got hidden beneath the bar
     FIXED: mime types are shown only in english
